@@ -88,9 +88,10 @@ CONVENIENCE_METHODS['count'] = (
     ('__len__', lambda self: self.count()),
 )
 
-#CONVENIENCE_METHODS['description'] = (
-    #('__repr__', lambda self: self.description()),
-#)
+CONVENIENCE_METHODS['description'] = (
+    ('__repr__', lambda self: self.description()),
+    ('__str__', lambda self: self.description()),
+)
 
 CONVENIENCE_METHODS['containsObject:'] = (
     ('__contains__', lambda self, elem: (self.containsObject_(elem) != 0)),
